--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Neobrutalist Brands</title>
+    <title>Ethical Aisles – Ethical Alternatives to Supermarket Brands</title>
+    <meta name="description" content="Ethical Aisles helps you discover ethical, local, and sustainable alternatives to major supermarket brands in Australia. Vote with your cart and shop with heart." />
+    <meta name="keywords" content="ethical, supermarket, alternatives, Australia, local, sustainable, brands, shopping, buy better, boycott, fair trade" />
+    <meta property="og:title" content="Ethical Aisles – Ethical Alternatives to Supermarket Brands" />
+    <meta property="og:description" content="Discover which supermarket products to avoid and find ethical, local alternatives. Empower your choices and support a better marketplace." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://ethicalaisles.example.com" />
+    <meta property="og:image" content="https://ethicalaisles.example.com/og-image.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
